# clinical-text-classifier

./: .gitignore  README.md  databricks.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml  dev.yml  prod.yml  staging.yml
docs/: architecture.md  runbook.md
notebooks/: 01_eda.py  02_create_clean_dataset.py  03_create_train_ready_dataset.py
src/: data_loader.py  sample_data.py
src/clinical_text_classifier/: __init__.py  baseline.py  config.py  data.py  logging_utils.py  sample_data.py
src/clinical_text_classifier/jobs/: __init__.py  prepare_data.py  smoke_test.py  train_baseline.py
tests/: run_tests.py  test_baseline.py  test_config.py  test_data_pipeline.py
