[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-text-classifier"
version = "0.1.0"
description = "Production-oriented Azure Databricks project for clinical text classification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0.0",
  "joblib>=1.4.0",
  "matplotlib>=3.8.0",
  "mlflow>=2.9.0",
  "nltk>=3.8.0",
  "numpy>=1.26.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "seaborn>=0.13.0",
  "textstat>=0.7.4",
  "tqdm>=4.66.0",
  "wordcloud>=1.9.3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
clinical-prepare-data = "clinical_text_classifier.jobs.prepare_data:main"
clinical-train-baseline = "clinical_text_classifier.jobs.train_baseline:main"
clinical-smoke-test = "clinical_text_classifier.jobs.smoke_test:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["clinical_text_classifier*", "src*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
